--- a/404.html
+++ b/404.html
@@ -10,12 +10,12 @@
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://apemangr.github.io/404.html" />
-<title>404 Page not found | Obsidian Second Brain</title>
+<title>404 Page not found | Second Brain 🧠</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/book.min.6bdd7deef1087d1e8652b2ecc57f5220e50961e02f2b0d8ac7d7e98e5aeed86c.css" integrity="sha256-a9197vEIfR6GUrLsxX9SIOUJYeAvKw2Kx9fpjlru2Gw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/book.min.ae8752550e0257e2612ec69c1821393befc2a23e05b25d98a556f16ecc65d214.css" integrity="sha256-rodSVQ4CV&#43;JhLsacGCE5O&#43;/Coj4Fsl2YpVbxbsxl0hQ=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.01000b263288bbdbb2c156a4248ce4ce922c6b9d4eafd2d7c385cfc405817729.js" integrity="sha256-AQALJjKIu9uywVakJIzkzpIsa51Or9LXw4XPxAWBdyk=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.8b880051cf21f3cfb9c7d6fa95079c898e51c372cadbeb08ea790292d74cb52e.js" integrity="sha256-i4gAUc8h88&#43;5x9b6lQeciY5Rw3LK2&#43;sI6nkCktdMtS4=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -40,7 +40,7 @@ https://github.com/alex-shpak/hugo-book
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <h3>
-          <a href="/">Obsidian Second Brain</a>
+          <a href="/">Second Brain 🧠</a>
         </h3>
       </div>
     </main>
